--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,30 @@
-<h3> Welcome to Playlist Live </h3>
+<html>
+<head>
+<style> 
+.center {
+	text-align: center;
 
+	font-size: 50px;
+	font-weight: bold; 
+	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+body {
+	background-color: white;
+	text-align: center;
+
+}
+
+</style>
+</head>
+
+
+<body>
+
+<div class = "center">
+	<p> Welcome to Playlist Live! </p>
+
+<img src="play_button.jpg" alt="playbutton" width="460" height="460" class = "center"> 
+</div>
+</body>
+</html>
