--- a/app/views/playlists/join_form.html.erb
+++ b/app/views/playlists/join_form.html.erb
@@ -1,4 +1,21 @@
-<h2> Join a Live Playlist! </h2>
+<style>
+
+body {
+	
+	text-align: center;
+
+	font-size: 20px;
+	font-weight: bold; 
+	font-family: "Comic Sans MS", cursive, sans-serif;
+
+}
+</style>
+<body>
+
+<h2>Join a Live Playlist! </h2>
+
+
+</body>
 
 <%= form_tag grant_access_path do %>
 	<%= label_tag(:join_name, "Join Name: ") %>
