--- a/app/views/users/live_playlists.html.erb
+++ b/app/views/users/live_playlists.html.erb
@@ -1,2 +1,11 @@
-<h3> <%=@user.first_name if @user.first_name%> 's Live Playlists </h3>
+
+<style>
+h3 {
+	text-align: center;
+	font-weight: bold;
+	font-size: 20px;
+}
+</style>
+<h3><</h3>
+%=@user.first_name if @user.first_name%>'s Live Playlists 
 
