--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,6 +4,6 @@
 	<%= label_tag(:song_name, "Song Name: ") %>
 	<%= text_field_tag(:song_name)%>
 	<%= label_tag(:artist_name, "Artist Name: ") %>
-	<%= password_field_tag(:artist_name) %>
+	<%= text_field_tag(:artist_name) %>
 	<%= submit_tag("Add Song!") %>
 <% end %>
